--- a/文章/替代酒馆.md
+++ b/文章/替代酒馆.md
@@ -1,16 +1,20 @@
 我在这里列出我所知的一些并非酒馆项目，它们没有酒馆的丰富生态，但也许它们的会给人一种有别于酒馆得体验，我带有拖延症并且有认知偏差，***更关心项目本身是否是开源*** ，下面是列表: 
-- [risu](https://discord.com/channels/1134557553011998840/1374435822639644702/1374436027997098124)
-- [fount](https://discord.com/channels/1134557553011998840/1374435822639644702/1374436162734657648)
-- [Cradle](https://discord.com/channels/1134557553011998840/1374435822639644702/1374436392154693693)
-- [trance](https://discord.com/channels/1134557553011998840/1374435822639644702/1374436527421263994)
-- [Narratium](https://discord.com/channels/1134557553011998840/1374435822639644702/1374436772087595160)
-- [Pulsar](https://discord.com/channels/1134557553011998840/1374435822639644702/1374436901913628814)
-- [TauriTavern](https://discord.com/channels/1134557553011998840/1374435822639644702/1378590321356570735)
-- [forksilly](https://discord.com/channels/1134557553011998840/1374435822639644702/1379921196577067221)
+- [risu]
+- [fount]
+- [Cradle]
+- [trance]
+- [Narratium]
+- [Pulsar]
+- [TauriTavern]
+- [forksilly]
+- [VCP聊天客户端]
+
+> 为了让阅读体验较为统一，本md文件放到GitHub上面
 
 ## risu
 开源地址: https://github.com/kwaroran/RisuAI
 支援平台: Web/Windows/Linux/macOS/Docker
+开源协议: GPLv3
 技术架构: Svelte/Typescript/Tauri
 简单介绍: 
 > RisuAI是一个功能类似酒馆的开源的人工智能角色扮演软件，它提供了一个更简单、易用的现代化界面，相当于一个酒馆的优质平替。
@@ -20,6 +24,7 @@
 ## fount
 开源地址: https://github.com/steve02081504/fount
 支援平台: Windows/Linux/macOS/Android/Docker
+开源协议: 未知(有，但文件包含二进制数据无法阅读)
 技术架构:  deno/Express/JavaScript
 简单介绍: 
 > fount 是~~一个由 AI 驱动的角色交互平台，旨在赋能于你。它是一座桥梁，将你与想象中的角色连接起来，让你毫不费力地与他们交谈，创造属于你自己的角色，并与世界分享。一条出乎意料地易于上手的道路。~~ 一个特殊的ai交互框架，如果使用过龙胆这个角色的话，你便会发现目前这个交互框架会给人一种[Taromati2](https://github.com/Taromati2/Taromati2)这种类型的桌宠的感觉
@@ -29,6 +34,7 @@
 ## Cradle
 开源地址: https://github.com/AliceSyndrome285/CradleAI
 支援平台: Android/iOS
+开源协议: MIT
 技术架构: TypeScript/Expo
 简单介绍: 
 > 是一个开源的前端工具，任何人可自行上传代码在EXPO平台打包和安装，或进行原生的apk构建，声称 ***现在和将来都不会提供任何角色卡上传或分享的功能或平台*** 
@@ -38,6 +44,7 @@
 ## trance
 开源地址: https://github.com/oocmoe/trance
 支援平台: Android/iOS
+开源协议: 无(????)
 技术架构: TypeScript/React
 简单介绍: 
 >  "trance"（中文名称："喘息"）可以在 安卓 IOS设备上安装原生运行。核心设计理念是“简单，易用”减少复杂界面设计，降低学习使用成本，可以更高效的和 AI 角色进行交互。
@@ -46,6 +53,7 @@
 ## Narratium
 开源地址: https://github.com/Narratium/Narratium.ai
 支援平台: web
+开源协议: MIT
 技术架构: TypeScript
 简单介绍: 
 > Narratium 目标打造一套轻量化故事引擎，结合上下文压缩、记忆系统、图结构知识检索（Graph-RAG），支持在长篇故事中保持角色一致性和世界逻辑连续性，显著提升 AI 生成故事的沉浸感和连贯性。
@@ -56,6 +64,7 @@
 ## Pulsar
 开源地址: [Pulsar: 简洁，优雅，灵活，强大，无冗余的酒馆完全替代项目](https://discord.com/channels/1134557553011998840/1364828500942651422/1373585893369184317)
 支援平台: Windows/Linux
+开源协议: MIT
 技术架构: Vue3/TypeScript/Vite/Tailwind/Daisy/pinia
 简单介绍: 
 >  没有介绍，但是有开发的技术思路: https://discord.com/channels/1134557553011998840/1364828500942651422/1364828500942651422
@@ -65,6 +74,7 @@
 ## TauriTavern
 开源地址: https://github.com/Darkatse/TauriTavern
 支援平台: Windows/Linux/？
+开源协议: AGPL-3.0
 技术架构: Rust/Node.js/Tauri
 简单介绍: 
 >  一个使用了rust重构了后端的酒馆，但前端没有被重构，连幼苗都算不上，只是一颗种子
@@ -74,9 +84,20 @@
 ## forksilly
 开源地址: https://github.com/fatsnk/forksilly.doc
 支援平台: Android
+开源协议: AGPL-3.0
 技术架构: react/native
 简单介绍: 
 >  该项目为自用分享，不接受任何功能申请或答疑，99.9%的代码由AI生成，你提需求我也做不出来（
 >  适合纯文字卡、简单插图卡（使用图床），不适合花里胡哨的前端卡，兼容sillytavern V2角色卡（png）、世界书、正则、预设
 
 个人评价: 我能说什么呢？至少是开源项目
+
+## VCP 聊天客户端
+开源地址: https://github.com/lioensky/VCPChat
+支援平台: Windows
+开源协议: 无(????)
+技术架构: Electron/Node.js/JavaScript
+简单介绍: 
+> 一个为 VCP (Variable & Command Protocol) 服务器打造的 AI 聊天桌面客户端。
+
+个人评价: 一个强烈依赖后端[VCPToolBox](https://github.com/lioensky/VCPToolBox)的前端，要所以要谈及这个前端我们先谈谈他这个后端，首先是README看得我两眼发昏，唉，**VCP本质上是以插件和持久化记忆为核心的AI Agent中间层，把它当成一个mcp服务就行了**。所谓的"AI - 工具 - 记忆"三角就是ai模型、各种插件、通过日记来实现上下文管理，所谓的AI 进化或自主学习，本质上是一个基于文本的、自动化的信息反馈循环。AI 把经验写进笔记本，这个上下文又成为它下一次思考的参考资料，相当于让ai修改上下文，但是这个上下文交给ai修改效果如何我就不好说了，所谓的群体智能就是一个全局世界书，其他的内容...前端？这个前端没什么好谈的......于此相比Steve的fount中文介绍都眉清目秀起来
