--- a/文章/替代酒馆.md
+++ b/文章/替代酒馆.md
@@ -1,17 +1,17 @@
 我在这里列出我所知的一些并非酒馆项目，它们没有酒馆的丰富生态，但也许它们的会给人一种有别于酒馆得体验，我带有拖延症并且有认知偏差，***更关心项目本身是否是开源*** ，下面是列表: 
-- [risu]
-- [fount]
-- [Cradle]
-- [trance]
-- [Narratium]
-- [Pulsar]
-- [TauriTavern]
-- [forksilly]
-- [VCP聊天客户端]
+- [Risu](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#Risu)
+- [fount](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#fount)
+- [Cradle](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#Cradle)
+- [trance](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#trance)
+- [Narratium](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#Narratium)
+- [Pulsar](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#Pulsar)
+- [TauriTavern](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#TauriTavern)
+- [forksilly](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#forksilly)
+- [VCP聊天客户端](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#VCP聊天客户端)
 
 > 为了让阅读体验较为统一，本md文件放到GitHub上面
 
-## risu
+## Risu
 开源地址: https://github.com/kwaroran/RisuAI
 支援平台: Web/Windows/Linux/macOS/Docker
 开源协议: GPLv3
@@ -40,7 +40,7 @@
 > 是一个开源的前端工具，任何人可自行上传代码在EXPO平台打包和安装，或进行原生的apk构建，声称 ***现在和将来都不会提供任何角色卡上传或分享的功能或平台*** 
 
 个人评价: 在移动端用起来比酒馆流畅，但是朋友圈以及整体设定看起来更像是一个类似于微信形式的聊天工具，原生支持表格和向量化，用起来比酒馆流畅太多了
-缺点: 和酒馆的使用逻辑有点不一样，需要适应
+
 ## trance
 开源地址: https://github.com/oocmoe/trance
 支援平台: Android/iOS
@@ -58,8 +58,8 @@
 简单介绍: 
 > Narratium 目标打造一套轻量化故事引擎，结合上下文压缩、记忆系统、图结构知识检索（Graph-RAG），支持在长篇故事中保持角色一致性和世界逻辑连续性，显著提升 AI 生成故事的沉浸感和连贯性。
 
-个人评价: 一个风格比较特殊的沉浸式交互故事创作与体验平台，[类脑](https://discord.com/channels/1134557553011998840/1371671334718935150)和[旅途](https://discord.com/channels/1291925535324110879/1371680260340318289)都有相关的帖子，已经可以加载世界书和正则，预设也在开发中
-缺点: 暂时没有导入预设的地方，以及并不适配移动端，需要等待作者重写组件
+个人评价: 一个风格比较特殊的沉浸式交互故事创作与体验平台，[类脑](https://discord.com/channels/1134557553011998840/1371671334718935150)和[旅途](https://discord.com/channels/1291925535324110879/1371680260340318289)都有相关的帖子，已经可以加载世界书和正则
+
 
 ## Pulsar
 开源地址: [Pulsar: 简洁，优雅，灵活，强大，无冗余的酒馆完全替代项目](https://discord.com/channels/1134557553011998840/1364828500942651422/1373585893369184317)
