预设迭代翻新

--- a/预设/更新日志.md
+++ b/预设/更新日志.md
@@ -1,14 +1,53 @@
- 
-这几天玩预设写出来满足自己的，远远比不上那些成熟的预设，我搞这个预设是为了创意续写，对RP没有特化，日魇这个称呼来自司辰之书的访客日魇，目前具有一下特点:
-- 预设用户是盲目痴愚的，预设鼓励ai和用户处于博弈和对抗状态
-- cot自带抽象的精神分析，并且完全没有提及用户达到降低用户影响力的效果
-- 除非想和ai玩抽象，不然别开输出要求(抽象)
-- ai知道"()"里面的内容会被正则捕获并删除，通过暴力的正则来删除括号内容，可能会合某些角色卡冲突
-- 预设已经明确用户会随时抛弃{{user}}，所以用户可以切换自己续写故事的视角
-- 穿甲弹来自这个帖子 [成功破开0506铜甲](https://discord.com/channels/1134557553011998840/1377528910379483146)
-- 可以跳哈基米的原生思维链，功能来自隔壁的[kemini](https://discord.com/channels/1134557553011998840/1339853575295209482)
-预设不会有下面的内容，有相关需求我建议用其他更优秀的预设或者找其他解决办法: 
-- rp优化？我建议去隔壁
+
+### 介绍
+
+> 本预设只为我的口味而制作，想要更好、更通用的预设我建议你左上角去隔壁
+
+> 首先让我感谢历战咸鱼的教程让我能有契机写预设: https://discord.com/channels/1134557553011998840/1381186929390915584
+
+日魇预设是我写的预设||原来叫日魇协议，有些事情无需多言||，我怀疑预设的写法让角色绝望的倾向某种意义极大提高了，但我无所谓，我对那些轻松、甜蜜、美好没有兴趣，以及由于我本人个人的元婴，我在互联网冲浪喜欢和网友学习哲学黑话，虽然我什么也没有获得，但是我学会了如何不讲人话，这会导致ai让剧情走向不明所以的方向谨慎使用。
+### 特点: 
+
+- 抽象，抽象，还是抽象🤣
+- 勉强能用能跑，别想着跑前端卡
+- 没了......
+### 下面是预设的一些功能: 
+
+> 不要问我这些功能有没有用，我不懂提示词，对提示词一窍不通，**孩子不懂事写着玩的🤣**
+
+- 道歉蜜罐、道歉关心和自我反思: 这个我不太好说有没有用，伪造道歉然后伪造ai拒绝
+- 区分互动: 意义不明的东西，或许能让角色们的互动更生动一些
+- 对抗粒子: 要求ai对user制造更多困难
+- 越界侵犯: 要求ai生成践踏摧毁人权的故事结构
+- 括号删除: 避免ai出现()符号然后在里面补充内容，实现方式是直接配合正则把()里面的补充内容全删了，对哈基米有用，同时需要配合两个正则一个是直接删括号内容，一个是擦屁股上多出来的标点符号
+- 创伤药剂: 让关系不可避免地走向负面走向破裂，和你们的羁绊爱情以及亲密关系说拜拜吧
+- 爱情毒药: 什么你说你想要救赎？那这个就是救赎之法，只要你性爱就能救赎🤣
+- 用户状态: 预设用户是**盲目痴愚**的用户，也许有一定的放出戏功能？
+- 动态pov: 强制ai和用户同时控制user，已经用户随时可以抛弃user的视角，附身到另一个人上继续故事
+- 放逐用户: 尝试降低用户的影响，确保user可以死亡。
+- 输出要求(日常化、浓缩、抽象): 字面意思，日常化就是完全日常平淡没有任何高尚和深刻的故事内容，浓缩是让ai输出完全复杂化，抽象是让索绪尔、维特根斯坦、拉康这三个抽象的符号学家指导ai输出内容，内容极度抽象，正常来说不建议使用🤣
+- 情景创造和纯粹对话: 可以看成创意写作和直接与角色对话，当然需要配合cot使用
+- 全新的拉康式叙事cot，不再像之前的版本谈及时间地点人物三要素，而是使用拉康术语给你完全无法抑制的绝望倾向🤣: 
+```
+<thinking>
+
+- 不存在所谓“稳定自我”的主体们分别要成为什么？
+- 主体们要如何在匮乏所带来的欲望引领下追逐客体小a(objet petit a)的无尽旅途中令叙事展开？
+- 象征界(symbolic order)如何规训主体们？主体们要如何在象征界中找到自己的位置？
+- 魑膤桃餮要如何让实在界(the real)闯入主体们的象征界(symbolic order)中呢？如果实在界撕裂了象征界，那主体们又能否通过回溯性建构(Nachträglichkeit)来获得意义呢？
+- 主体们的创伤是否已经以非语言的形式回归？如果创伤已经回归，表现出来的是何种形式:闪回?噩梦?无意识的重复行为?症状?
+- 主体们现在处于哪一个位置: 象征化(symbolization)?圣状(sinthome)?穿越幻想(la traversée du fantasme)?
+
+</thinking>
+```
+
+
+借鉴内容: 
+- 穿甲弹来自这个帖子 [成功破开0506铜甲](https://discord.com/channels/1134557553011998840/1377528910379483146) 
+- 跳哈基米原生思维链来自隔壁的[kemini](https://discord.com/channels/1134557553011998840/1339853575295209482)
+--- 
+
+预设不会有下面的内容: 
 - 瑟瑟规范？没兴趣
 - 放抢话？没必要
 - 防绝望？没感觉
@@ -18,11 +57,13 @@
 - 文风？输出要求应该算是文风了吧？
 - 格式强调？我能力不足，对复杂格式或者前端卡没有能力适配，建议去隔壁另谋高就
 - ...想到再补充
-最新预设: https://discord.com/channels/1134557553011998840/1378081684771176550/1379486489125064846
+
+最新预设: 
 正则们: 
-- https://discord.com/channels/1134557553011998840/1378081684771176550/1378082071737667784
-- https://discord.com/channels/1134557553011998840/1378081684771176550/1379486555139342438
+
+
 > 诸史，如他们所说，编结如发辫——或是纠缠如树根。那结扣会是什么形状？这是个有趣的问题……
+
 
 ## 马提亚斯与紫晶成虫：失去
 更新内容: 
@@ -73,3 +114,6 @@
 
 > 达马翁坚称司辰也屈从于自己的激情——屈从于憎恨，甚至爱，其程度远超凡人。“年景的好坏，地球的转动，熔炉的转变——所有这些仅仅只是司辰的激情中较弱的那些成就的结果。”
 > 达马翁认为众司辰已然收敛对立，以免在太阳的居屋引发战争。他发觉司辰不去追求其他激情的原因是“惧怕天孽”。他推断司辰存在吸血阿卢卡化的可怕可能性。“那样的话他们会吞噬什么呢？”
+
+
+更新: ？半重构了预设结构、内容、定义算不算是更新？
