--- a/文章/替代酒馆.md
+++ b/文章/替代酒馆.md
@@ -9,7 +9,7 @@
 - [forksilly](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#forksilly)
 - [VCP聊天客户端](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#VCP聊天客户端)
 
-> 为了让阅读体验较为统一，本md文件放到GitHub上面
+> 为了让阅读体验较为统一，本md文件放到GitHub上面: [替代酒馆](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/%E6%96%87%E7%AB%A0%2F%E6%9B%BF%E4%BB%A3%E9%85%92%E9%A6%86.md)
 
 ## [Risu](https://github.com/kwaroran/RisuAI)
 
