--- a/文章/替代酒馆.md
+++ b/文章/替代酒馆.md
@@ -3,7 +3,7 @@
 - [fount](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#fount)
 - [Cradle](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#Cradle)
 - [trance](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#trance)
-- [Narratium](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#Narratium)
+- ~~Narratium~~[开发者打算商业化]
 - [Pulsar](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#Pulsar)
 - [TauriTavern](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#TauriTavern)
 - [forksilly](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#forksilly)
@@ -12,6 +12,11 @@
 > 为了让阅读体验较为统一，本md文件放到GitHub上面: [替代酒馆](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/%E6%96%87%E7%AB%A0%2F%E6%9B%BF%E4%BB%A3%E9%85%92%E9%A6%86.md)
 
 ## [Risu](https://github.com/kwaroran/RisuAI)
+
+<picture>
+  <source media="(prefers-color-scheme: dark)" srcset="https://github.com/kwaroran/RisuAI/assets/116663078/efbbfe78-65ad-43ef-89f8-36fa94826925">
+  <img alt="text" src="https://github.com/kwaroran/RisuAI/assets/116663078/bc28e5a3-c6da-4a42-bfc1-f3ab3debdf65">
+</picture>
 
 支援平台: Web/Windows/Linux/macOS/Docker
 
@@ -25,6 +30,8 @@
 个人评价: 一个***未来可期***的酒馆替代品，卡支持内嵌资源，自带if和算数宏，多语言开场白，直接使用js或者lua脚本，而不用学习某个ST脚本语言
 
 ## [fount](https://github.com/steve02081504/fount)
+
+![repo img](https://repository-images.githubusercontent.com/862251163/3b57d9ea-ab18-4b70-b11d-f74c764016aa)
 
 支援平台: Windows/Linux/macOS/Android/Docker
 
@@ -64,19 +71,9 @@
 
 个人评价: 处于开发版本中的开发版本，幼苗中的幼苗，我没有用过，不予评价，作者已经杀出冥界
 
-## [Narratium](https://github.com/Narratium/Narratium.ai)
+## Narratium
 
-支援平台: web
-
-开源协议: MIT
-
-技术架构: TypeScript
-
-简单介绍: 
-
-> Narratium 目标打造一套轻量化故事引擎，结合上下文压缩、记忆系统、图结构知识检索（Graph-RAG），支持在长篇故事中保持角色一致性和世界逻辑连续性，显著提升 AI 生成故事的沉浸感和连贯性。
-
-个人评价: 一个风格比较特殊的沉浸式交互故事创作与体验平台，[类脑](https://discord.com/channels/1134557553011998840/1371671334718935150)和[旅途](https://discord.com/channels/1291925535324110879/1371680260340318289)都有相关的帖子，已经可以加载世界书和正则
+个人评价: 开发者打算商业化，目前项目还在开源，但我不推荐使用
 
 ## Pulsar
 开发地址: [Pulsar: 简洁，优雅，灵活，强大，无冗余的酒馆完全替代项目](https://discord.com/channels/1134557553011998840/1364828500942651422/1373585893369184317)
