--- a/预设/更新日志.md
+++ b/预设/更新日志.md
@@ -1,53 +1,41 @@
 
-### 介绍
+## 介绍
 
 > 本预设只为我的口味而制作，想要更好、更通用的预设我建议你左上角去隔壁
 
 > 首先让我感谢历战咸鱼的教程让我能有契机写预设: https://discord.com/channels/1134557553011998840/1381186929390915584
 
-日魇预设是我写的预设||原来叫日魇协议，有些事情无需多言||，我怀疑预设的写法让角色绝望的倾向某种意义极大提高了，但我无所谓，我对那些轻松、甜蜜、美好没有兴趣，以及由于我本人个人的元婴，我在互联网冲浪喜欢和网友学习哲学黑话，虽然我什么也没有获得，但是我学会了如何不讲人话，这会导致ai让剧情走向不明所以的方向谨慎使用。
-### 特点: 
+日魇预设是我写的预设||原来叫日魇协议，有些事情无需多言||，我怀疑预设的写法让角色绝望的倾向某种意义极大提高了，但我无所谓，我对那些轻松、甜蜜、美好没有兴趣，以及由于我本人个人的原因，我在互联网冲浪喜欢和网友学习哲学黑话，虽然我什么也没有获得，但是我学会了如何不讲人话。
+## 特点: 
 
-- 抽象，抽象，还是抽象🤣
+- 在本预设中user没有和其他预设一样那么重要
+- **最重要的是user≠用户**
 - 勉强能用能跑，别想着跑前端卡
-- 没了......
 ### 下面是预设的一些功能: 
 
 > 不要问我这些功能有没有用，我不懂提示词，对提示词一窍不通，**孩子不懂事写着玩的🤣**
 
-- 道歉蜜罐、道歉关心和自我反思: 这个我不太好说有没有用，伪造道歉然后伪造ai拒绝
-- 区分互动: 意义不明的东西，或许能让角色们的互动更生动一些
-- 对抗粒子: 要求ai对user制造更多困难
+- 爆炸性冲突: 要求ai对user制造更多困难
 - 越界侵犯: 要求ai生成践踏摧毁人权的故事结构
 - 括号删除: 避免ai出现()符号然后在里面补充内容，实现方式是直接配合正则把()里面的补充内容全删了，对哈基米有用，同时需要配合两个正则一个是直接删括号内容，一个是擦屁股上多出来的标点符号
-- 创伤药剂: 让关系不可避免地走向负面走向破裂，和你们的羁绊爱情以及亲密关系说拜拜吧
+- 成人灵药: 能让人长大的东西呢
+- 破裂伤剂: 让关系不可避免地走向负面走向破裂，和你们的羁绊爱情以及亲密关系说拜拜吧
 - 爱情毒药: 什么你说你想要救赎？那这个就是救赎之法，只要你性爱就能救赎🤣
-- 用户状态: 预设用户是**盲目痴愚**的用户，也许有一定的放出戏功能？
-- 动态pov: 强制ai和用户同时控制user，已经用户随时可以抛弃user的视角，附身到另一个人上继续故事
+- 用户状态: 预设用户是**盲目痴愚**的用户，也许有一定的防出戏功能？
+- 动态视角: 视角不再锁定在用户身上，user可以死亡了，然后继续剧情
+- 安科创作: 你给ai多个选项，通过酒馆来决定随机数，然后ai根据随机数决定剧情发展
 - 放逐用户: 尝试降低用户的影响，确保user可以死亡。
-- 输出要求(日常化、浓缩、抽象): 字面意思，日常化就是完全日常平淡没有任何高尚和深刻的故事内容，浓缩是让ai输出完全复杂化，抽象是让索绪尔、维特根斯坦、拉康这三个抽象的符号学家指导ai输出内容，内容极度抽象，正常来说不建议使用🤣
+- 输出要求(日常化、浓缩、抽象): 字面意思，三种风格
 - 情景创造和纯粹对话: 可以看成创意写作和直接与角色对话，当然需要配合cot使用
-- 全新的拉康式叙事cot，不再像之前的版本谈及时间地点人物三要素，而是使用拉康术语给你完全无法抑制的绝望倾向🤣: 
-```
-<thinking>
-
-- 不存在所谓“稳定自我”的主体们分别要成为什么？
-- 主体们要如何在匮乏所带来的欲望引领下追逐客体小a(objet petit a)的无尽旅途中令叙事展开？
-- 象征界(symbolic order)如何规训主体们？主体们要如何在象征界中找到自己的位置？
-- 魑膤桃餮要如何让实在界(the real)闯入主体们的象征界(symbolic order)中呢？如果实在界撕裂了象征界，那主体们又能否通过回溯性建构(Nachträglichkeit)来获得意义呢？
-- 主体们的创伤是否已经以非语言的形式回归？如果创伤已经回归，表现出来的是何种形式:闪回?噩梦?无意识的重复行为?症状?
-- 主体们现在处于哪一个位置: 象征化(symbolization)?圣状(sinthome)?穿越幻想(la traversée du fantasme)?
-
-</thinking>
-```
+- 全新的拉康式叙事cot，抛弃之前的版本谈及时间地点人物三要素，而是使用拉康术语给你完全无法抑制的绝望倾向🤣
 
 
-借鉴内容: 
+### 借鉴内容: 
 - 穿甲弹来自这个帖子 [成功破开0506铜甲](https://discord.com/channels/1134557553011998840/1377528910379483146) 
 - 跳哈基米原生思维链来自隔壁的[kemini](https://discord.com/channels/1134557553011998840/1339853575295209482)
 --- 
 
-预设不会有下面的内容: 
+### 预设不会有下面的内容: 
 - 瑟瑟规范？没兴趣
 - 放抢话？没必要
 - 防绝望？没感觉
@@ -55,11 +43,10 @@
 - 字数要求？ai不会数数
 - 摘要和总结？我用不到
 - 文风？输出要求应该算是文风了吧？
-- 格式强调？我能力不足，对复杂格式或者前端卡没有能力适配，建议去隔壁另谋高就
-- ...想到再补充
+- ...想到再补充，说不定我会改变主意呢？🤣
 
-最新预设: 
-正则们: 
+最新预设: https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/tree/main/预设
+正则们: https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/tree/main/预设/正则
 
 
 > 诸史，如他们所说，编结如发辫——或是纠缠如树根。那结扣会是什么形状？这是个有趣的问题……
@@ -117,3 +104,12 @@
 
 
 更新: ？半重构了预设结构、内容、定义算不算是更新？
+
+
+## 对于不可说的东西我们必须保持沉默
+
+更新: 
+- 新功能: 安科创作: 你给ai多个选项，通过酒馆来决定随机数，然后ai根据随机数决定剧情发展
+- 新功能: 成人灵药: 还在因为ai的偏见导致成年人的世界过于美好吗？成人灵药能让你的人物更加多样化: 抽烟、喝酒、嫖娼、赌博、吸毒、、离婚、分手、出轨、分财产，大众喜欢白诱瘦审美，但我认为这没什么用，因为ai不强调就会漠视这些东西
+- 新功能: 动态视角: 干掉了原来的pov视角使用新的提示词进一步降低user的影响力
+- 一些包裹的标签被替换，现在和当初的梦境几乎没有关系了，一些提示词修改
