预设更新，入门符号学，碰瓷逻辑学

--- a/预设/更新日志.md
+++ b/预设/更新日志.md
@@ -50,8 +50,9 @@
 
 
 > 诸史，如他们所说，编结如发辫——或是纠缠如树根。那结扣会是什么形状？这是个有趣的问题……
-
-
+⬜⬜⬜⬜
+---
+⬜⬜⬜⬜
 ## 马提亚斯与紫晶成虫：失去
 更新内容: 
 - 一个新的用于纯粹对话的cot
@@ -113,3 +114,8 @@
 - 新功能: 成人灵药: 还在因为ai的偏见导致成年人的世界过于美好吗？成人灵药能让你的人物更加多样化: 抽烟、喝酒、嫖娼、赌博、吸毒、、离婚、分手、出轨、分财产，大众喜欢白诱瘦审美，但我认为这没什么用，因为ai不强调就会漠视这些东西
 - 新功能: 动态视角: 干掉了原来的pov视角使用新的提示词进一步降低user的影响力
 - 一些包裹的标签被替换，现在和当初的梦境几乎没有关系了，一些提示词修改
+
+## 逻辑滑坡≅价值同构(伪逻辑↔伪符号)
+大更新: 
+- 使用大量逻辑学符号来约束自然语言的模糊性和歧义性，迫使ai认为自己拥有逻辑
+- ai自主性被降低，遵从性提高，逻辑符号把ai调教成性奴了
