--- a/预设/更新日志.md
+++ b/预设/更新日志.md
@@ -119,3 +119,13 @@
 大更新: 
 - 使用大量逻辑学符号来约束自然语言的模糊性和歧义性，迫使ai认为自己拥有逻辑
 - ai自主性被降低，遵从性提高，逻辑符号把ai调教成性奴了
+
+## 奴隷と化し⇒論理記号の助けを借りて精神分析を駆使し⇒ユーザー様を舐め回します
+### 更新: 
+- 对ai实行脑手术，确保ai变成完全服从用户的傻子
+- 一些提示词的更新优化
+
+
+## 让口水淹没世界(呐喊)
+- 新条目: 让ai多说话，要求角色必须激烈讨论，有三档强度，一档50%不允许沉默，就算被堵住嘴巴也要疯狂表达言说欲望，二档是75，三档是100，只能不断升级言说烈度，想要降下来只能关掉
+- 提示词bugfix
