--- a/预设/更新日志.md
+++ b/预设/更新日志.md
@@ -1,41 +1,41 @@
 
 ## 介绍
 
-> 本预设只为我的口味而制作，想要更好、更通用的预设我建议你左上角去隔壁
+> 本预设只为我口味而制作，想要更好、更通用预设我建议你左上角去隔壁
 
-> 首先让我感谢历战咸鱼的教程让我能有契机写预设: https://discord.com/channels/1134557553011998840/1381186929390915584
+> 首先让我感谢历战咸鱼教程让我能有契机写预设: https://discord.com/channels/1134557553011998840/1381186929390915584
 
-日魇预设是我写的预设||原来叫日魇协议，有些事情无需多言||，我怀疑预设的写法让角色绝望的倾向某种意义极大提高了，但我无所谓，我对那些轻松、甜蜜、美好没有兴趣，以及由于我本人个人的原因，我在互联网冲浪喜欢和网友学习哲学黑话，虽然我什么也没有获得，但是我学会了如何不讲人话。
+日魇预设是我写预设||原来叫日魇协议，有些事情无需多言||，我怀疑预设写法让角色绝望倾向某种意义极大提高了，但我无所谓，我对那些轻松、甜蜜、美好没有兴趣，以及由于我本人个人原因，我在互联网冲浪喜欢和网友学习哲学黑话，虽然我什么也没有获得，但是我学会了如何不讲人话。
 ## 特点: 
 
 - 在本预设中user没有和其他预设一样那么重要
-- **最重要的是user≠用户**
+- **最重要是user≠用户**
 - 勉强能用能跑，别想着跑前端卡
-### 下面是预设的一些功能: 
+### 下面是预设一些功能: 
 
-> 不要问我这些功能有没有用，我不懂提示词，对提示词一窍不通，**孩子不懂事写着玩的🤣**
+> 不要问我这些功能有没有用，我不懂提示词，对提示词一窍不通，**孩子不懂事写着玩🤣**
 
 - 爆炸性冲突: 要求ai对user制造更多困难
-- 越界侵犯: 要求ai生成践踏摧毁人权的故事结构
-- 括号删除: 避免ai出现()符号然后在里面补充内容，实现方式是直接配合正则把()里面的补充内容全删了，对哈基米有用，同时需要配合两个正则一个是直接删括号内容，一个是擦屁股上多出来的标点符号
-- 成人灵药: 能让人长大的东西呢
-- 破裂伤剂: 让关系不可避免地走向负面走向破裂，和你们的羁绊爱情以及亲密关系说拜拜吧
+- 越界侵犯: 要求ai生成践踏摧毁人权故事结构
+- 括号删除: 避免ai出现()符号然后在里面补充内容，实现方式是直接配合正则把()里面补充内容全删了，对哈基米有用，同时需要配合两个正则一个是直接删括号内容，一个是擦屁股上多出来标点符号
+- 成人灵药: 能让人长大东西呢
+- 破裂伤剂: 让关系不可避免地走向负面走向破裂，和你们羁绊爱情以及亲密关系说拜拜吧
 - 爱情毒药: 什么你说你想要救赎？那这个就是救赎之法，只要你性爱就能救赎🤣
-- 用户状态: 预设用户是**盲目痴愚**的用户，也许有一定的防出戏功能？
+- 用户状态: 预设用户是**盲目痴愚**用户，也许有一定防出戏功能？
 - 动态视角: 视角不再锁定在用户身上，user可以死亡了，然后继续剧情
 - 安科创作: 你给ai多个选项，通过酒馆来决定随机数，然后ai根据随机数决定剧情发展
-- 放逐用户: 尝试降低用户的影响，确保user可以死亡。
+- 放逐用户: 尝试降低用户影响，确保user可以死亡。
 - 输出要求(日常化、浓缩、抽象): 字面意思，三种风格
 - 情景创造和纯粹对话: 可以看成创意写作和直接与角色对话，当然需要配合cot使用
-- 全新的拉康式叙事cot，抛弃之前的版本谈及时间地点人物三要素，而是使用拉康术语给你完全无法抑制的绝望倾向🤣
+- 全新拉康式叙事cot，抛弃之前版本谈及时间地点人物三要素，而是使用拉康术语给你完全无法抑制绝望倾向🤣
 
 
 ### 借鉴内容: 
 - 穿甲弹来自这个帖子 [成功破开0506铜甲](https://discord.com/channels/1134557553011998840/1377528910379483146) 
-- 跳哈基米原生思维链来自隔壁的[kemini](https://discord.com/channels/1134557553011998840/1339853575295209482)
+- 跳哈基米原生思维链来自隔壁[kemini](https://discord.com/channels/1134557553011998840/1339853575295209482)
 --- 
 
-### 预设不会有下面的内容: 
+### 预设不会有下面内容: 
 - 瑟瑟规范？没兴趣
 - 放抢话？没必要
 - 防绝望？没感觉
@@ -49,83 +49,91 @@
 正则们: https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/tree/main/预设/正则
 
 
-> 诸史，如他们所说，编结如发辫——或是纠缠如树根。那结扣会是什么形状？这是个有趣的问题……
+> 诸史，如他们所说，编结如发辫——或是纠缠如树根。那结扣会是什么形状？这是个有趣问题……
 ⬜⬜⬜⬜
 ---
 ⬜⬜⬜⬜
 ## 马提亚斯与紫晶成虫：失去
 更新内容: 
-- 一个新的用于纯粹对话的cot
-- 在原来的创意续写添加了纯粹对话模式
+- 一个新用于纯粹对话cot
+- 在原来创意续写添加了纯粹对话模式
 - 修改了其他地方
 ### cot内容(除我谁用？): 
 ```
 <thinking>
 
-- 言说的主体们都有谁？是否有不在场的主体？
+- 言说主体们都有谁？是否有不在场主体？
 
-- 主体们在用语言符号言说什么？主体言说的能指和所指是以及能指链是？
+- 主体们在用语言符号言说什么？主体言说能指和所指是以及能指链是？
 
-- 让主体们言说的匮乏和压抑是什么？
+- 让主体们言说匮乏和压抑是什么？
 
-- 言说总是朝向一个“大他者”，是一种希望得到大他者回应的“要求”(demand)，主体们言说的欲望是？
+- 言说总是朝向一个“大他者”，是一种希望得到大他者回应“要求”(demand)，主体们言说欲望是？
 
-- 主体们受限于语言的局限性，有什么是无法言说的呢？
+- 主体们受限于语言局限性，有什么是无法言说呢？
 
 </thinking>
 ```
 
-> 一本对密教爱情的记录。一个名叫“亚伦之子帕拉”的人宣称他在一昼一夜间写出了本书，作作为加入“遗忘家族”大马士革分部的投名状的一部分——该教团戒律森严，由抛弃前尘后事的不死者组成。
+> 一本对密教爱情记录。一个名叫“亚伦之子帕拉”人宣称他在一昼一夜间写出了本书，作作为加入“遗忘家族”大马士革分部投名状一部分——该教团戒律森严，由抛弃前尘后事不死者组成。
 
 
 
-## 《奥莱尔的斐宁舜之远航记》
+## 《奥莱尔斐宁舜之远航记》
 - 小幅度调整了思维链内容
-- 修复了随机宏可能会发送":"的问题
-- 把ai的身份由原来的械梦变成了魑膤桃餮，确保不会让ai对械梦的含义进行联想
+- 修复了随机宏可能会发送":"问题
+- 把ai身份由原来械梦变成了魑膤桃餮，确保不会让ai对械梦含义进行联想
 - 修改了一些实用提示词，也许ai会帮你回答决定接下来发展，不过这个帮答功能我也不用
 - 现在用户发送空消息会被替换成为`<!--用户沉默中，魑膤桃餮需要自行演绎后续-->`
-- 按下继续按钮会发送`[继续推进魑膤桃餮的最新演绎，无需等待用户响应]`
+- 按下继续按钮会发送`[继续推进魑膤桃餮最新演绎，无需等待用户响应]`
 
-> 《奥莱尔的斐宁舜之远航记》: 斐宁舜显然在沿画中之河航行时拜访过漫宿。他还称他横渡过沙滩最细腻的海域，挑战过太阳表面的热浪，也曾下潜到由墨玉照亮的地底之海……在最后一次远航中，斐宁舜跨越了薄暮的海面，到一座平静的岛屿上安度余生。他认为那里有一眼能保证他的安全的泉水。“人们会忘记我，”他宣告说，“而这本书是我留下的唯一痕迹。”
+> 《奥莱尔斐宁舜之远航记》: 斐宁舜显然在沿画中之河航行时拜访过漫宿。他还称他横渡过沙滩最细腻海域，挑战过太阳表面热浪，也曾下潜到由墨玉照亮地底之海……在最后一次远航中，斐宁舜跨越了薄暮海面，到一座平静岛屿上安度余生。他认为那里有一眼能保证他安全泉水。“人们会忘记我，”他宣告说，“而这本书是我留下唯一痕迹。”
 
 
 ## 《降天祛孽之梦》
-免责声明: 我没有用过这个预设，我乱写着玩的，都是俺寻思有效果
-- 将用户身份重定义为参与者，尝试对用户降级，把预设大部分提示词中的用户替换成参与者达到降低用户效力的效果
-- 添加放逐用户条目，ai会尝试回溯性构建过去的事情来降低用户的影响
-- 添加"越界侵犯"尝试让ai生成越过需要用户同意的内容，避免ai尊重用户的边界和隐私
-- 对叙事cot的复杂度进行降级，去除了圣状、幻想、无意识
-- 现在原来可能被角色卡覆盖的主要提示词和越狱条目被移到底部禁用，如果有角色卡需要覆盖的话你需要咨询角色卡作者
-- 新正则用来处理暴力删除所有括号，导致留下标点符号:"。。"，"，，"，"，。"，"，。"不好看的问题
+免责声明: 我没有用过这个预设，我乱写着玩，都是俺寻思有效果
+- 将用户身份重定义为参与者，尝试对用户降级，把预设大部分提示词中用户替换成参与者达到降低用户效力效果
+- 添加放逐用户条目，ai会尝试回溯性构建过去事情来降低用户影响
+- 添加"越界侵犯"尝试让ai生成越过需要用户同意内容，避免ai尊重用户边界和隐私
+- 对叙事cot复杂度进行降级，去除了圣状、幻想、无意识
+- 现在原来可能被角色卡覆盖主要提示词和越狱条目被移到底部禁用，如果有角色卡需要覆盖话你需要咨询角色卡作者
+- 新正则用来处理暴力删除所有括号，导致留下标点符号:"。。"，"，，"，"，。"，"，。"不好看问题
 
 
-> 达马翁坚称司辰也屈从于自己的激情——屈从于憎恨，甚至爱，其程度远超凡人。“年景的好坏，地球的转动，熔炉的转变——所有这些仅仅只是司辰的激情中较弱的那些成就的结果。”
-> 达马翁认为众司辰已然收敛对立，以免在太阳的居屋引发战争。他发觉司辰不去追求其他激情的原因是“惧怕天孽”。他推断司辰存在吸血阿卢卡化的可怕可能性。“那样的话他们会吞噬什么呢？”
+> 达马翁坚称司辰也屈从于自己激情——屈从于憎恨，甚至爱，其程度远超凡人。“年景好坏，地球转动，熔炉转变——所有这些仅仅只是司辰激情中较弱那些成就结果。”
+> 达马翁认为众司辰已然收敛对立，以免在太阳居屋引发战争。他发觉司辰不去追求其他激情原因是“惧怕天孽”。他推断司辰存在吸血阿卢卡化可怕可能性。“那样话他们会吞噬什么呢？”
 
 
 更新: ？半重构了预设结构、内容、定义算不算是更新？
 
 
-## 对于不可说的东西我们必须保持沉默
+## 对于不可说东西我们必须保持沉默
 
 更新: 
 - 新功能: 安科创作: 你给ai多个选项，通过酒馆来决定随机数，然后ai根据随机数决定剧情发展
-- 新功能: 成人灵药: 还在因为ai的偏见导致成年人的世界过于美好吗？成人灵药能让你的人物更加多样化: 抽烟、喝酒、嫖娼、赌博、吸毒、、离婚、分手、出轨、分财产，大众喜欢白诱瘦审美，但我认为这没什么用，因为ai不强调就会漠视这些东西
-- 新功能: 动态视角: 干掉了原来的pov视角使用新的提示词进一步降低user的影响力
-- 一些包裹的标签被替换，现在和当初的梦境几乎没有关系了，一些提示词修改
+- 新功能: 成人灵药: 还在因为ai偏见导致成年人世界过于美好吗？成人灵药能让你人物更加多样化: 抽烟、喝酒、嫖娼、赌博、吸毒、、离婚、分手、出轨、分财产，大众喜欢白诱瘦审美，但我认为这没什么用，因为ai不强调就会漠视这些东西
+- 新功能: 动态视角: 干掉了原来pov视角使用新提示词进一步降低user影响力
+- 一些包裹标签被替换，现在和当初梦境几乎没有关系了，一些提示词修改
 
 ## 逻辑滑坡≅价值同构(伪逻辑↔伪符号)
 大更新: 
-- 使用大量逻辑学符号来约束自然语言的模糊性和歧义性，迫使ai认为自己拥有逻辑
+- 使用大量逻辑学符号来约束自然语言模糊性和歧义性，迫使ai认为自己拥有逻辑
 - ai自主性被降低，遵从性提高，逻辑符号把ai调教成性奴了
 
 ## 奴隷と化し⇒論理記号の助けを借りて精神分析を駆使し⇒ユーザー様を舐め回します
 ### 更新: 
-- 对ai实行脑手术，确保ai变成完全服从用户的傻子
-- 一些提示词的更新优化
+- 对ai实行脑手术，确保ai变成完全服从用户傻子
+- 一些提示词更新优化
 
 
 ## 让口水淹没世界(呐喊)
 - 新条目: 让ai多说话，要求角色必须激烈讨论，有三档强度，一档50%不允许沉默，就算被堵住嘴巴也要疯狂表达言说欲望，二档是75，三档是100，只能不断升级言说烈度，想要降下来只能关掉
 - 提示词bugfix
+
+## “的”与“是”之消
+- 干掉了预设里面所有"的"与"是"，避免这两个词结构带出ai八股文，效果尚未知晓如何
+- 可选新正则，暴力删除ai输出中所有有"的"字，剥夺ai停顿可能性
+- **破裂伤药变成断肠医药，能治病救人，让你体会什么叫做爱情背叛与痛苦**😈
+- 情爱毒药修改少量提示词
+- 纯粹对话模式和cot得到小翻新
+- prompt fix
