--- a/预设/更新日志.md
+++ b/预设/更新日志.md
@@ -1,37 +1,38 @@
-
 ## 介绍
 
 > 本预设只为我口味而制作，想要更好、更通用预设我建议你左上角去隔壁
 
 > 首先让我感谢历战咸鱼教程让我能有契机写预设: https://discord.com/channels/1134557553011998840/1381186929390915584
 
-日魇预设是我写预设||原来叫日魇协议，有些事情无需多言||，我怀疑预设写法让角色绝望倾向某种意义极大提高了，但我无所谓，我对那些轻松、甜蜜、美好没有兴趣，以及由于我本人个人原因，我在互联网冲浪喜欢和网友学习哲学黑话，虽然我什么也没有获得，但是我学会了如何不讲人话。
+日魇预设是我写预设||原来叫日魇协议，有些事情无需多言||，预设自带绝望倾向，我对那些轻松、甜蜜、美好没有兴趣，以及由于我本人个人原因，我在互联网冲浪喜欢和网友学习哲学黑话，虽然我什么也没有获得，但是我学会了如何不讲人话。
 ## 特点: 
-
-- 在本预设中user没有和其他预设一样那么重要
-- **最重要是user≠用户**
-- 勉强能用能跑，别想着跑前端卡
+- **user≠用户**
+- 能用，极具个人风格
+- 逻辑符号满天飞，伪逻辑书写如同祷文一般抽象难言
+- 不是专门为airp设计的
 ### 下面是预设一些功能: 
 
 > 不要问我这些功能有没有用，我不懂提示词，对提示词一窍不通，**孩子不懂事写着玩🤣**
 
-- 爆炸性冲突: 要求ai对user制造更多困难
-- 越界侵犯: 要求ai生成践踏摧毁人权故事结构
-- 括号删除: 避免ai出现()符号然后在里面补充内容，实现方式是直接配合正则把()里面补充内容全删了，对哈基米有用，同时需要配合两个正则一个是直接删括号内容，一个是擦屁股上多出来标点符号
+- 粒压似临地牢: 要求ai对主体制造更多困难
+- 侵犯自虐主体: **抖M专属**
+- 括号删除: 直接暴力删除正文所有括号，同时需要配合两个正则一个是直接删括号内容，一个是擦屁股上多出来标点符号
 - 成人灵药: 能让人长大东西呢
-- 破裂伤剂: 让关系不可避免地走向负面走向破裂，和你们羁绊爱情以及亲密关系说拜拜吧
-- 爱情毒药: 什么你说你想要救赎？那这个就是救赎之法，只要你性爱就能救赎🤣
-- 用户状态: 预设用户是**盲目痴愚**用户，也许有一定防出戏功能？
-- 动态视角: 视角不再锁定在用户身上，user可以死亡了，然后继续剧情
-- 安科创作: 你给ai多个选项，通过酒馆来决定随机数，然后ai根据随机数决定剧情发展
+- 酒神精神: 用来发酒疯肆意杀戮的
+- 繁活育药: 把世界变成沙耶血肉世界
+- 断肠医药: 和羁绊爱情这些狗屁关系说拜拜吧
+- 情爱毒药: 只要性爱就能终极救赎
+- 用户状态: 预设用户是**盲目痴愚**用户
+- 动态视域: 采用各种视角混合，你可以拿来airp，但是这不适合airp
+- 安科意外导向: 你给ai选项，然后ai根据酒馆随机数决定剧情发展
 - 放逐用户: 尝试降低用户影响，确保user可以死亡。
-- 输出要求(日常化、浓缩、抽象): 字面意思，三种风格
-- 情景创造和纯粹对话: 可以看成创意写作和直接与角色对话，当然需要配合cot使用
-- 全新拉康式叙事cot，抛弃之前版本谈及时间地点人物三要素，而是使用拉康术语给你完全无法抑制绝望倾向🤣
+- 现象创造和纯粹对话: 可以看成创意写作和直接与角色对话，当然需要配合cot使用
+- 口水淹没世界: 一开口就停不下来，后面问候请ai问候家人
+- 数理灭绝宣言: 把牛顿变成想象美好爱情的纯情少女，把阿基米德推上断头台，将数学王子高斯塞进他亲生女儿的血肉子宫里面
+- 多维庸态坍引: 让ai输出生活化、平凡化...
 
 
 ### 借鉴内容: 
-- 穿甲弹来自这个帖子 [成功破开0506铜甲](https://discord.com/channels/1134557553011998840/1377528910379483146) 
 - 跳哈基米原生思维链来自隔壁[kemini](https://discord.com/channels/1134557553011998840/1339853575295209482)
 --- 
 
@@ -42,7 +43,7 @@
 - 抗八股？我用[正则处理](https://discord.com/channels/1291925535324110879/1368365317742526634)
 - 字数要求？ai不会数数
 - 摘要和总结？我用不到
-- 文风？输出要求应该算是文风了吧？
+- 文风？为什么不外挂世界书？
 - ...想到再补充，说不定我会改变主意呢？🤣
 
 最新预设: https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/tree/main/预设
@@ -137,3 +138,14 @@
 - 情爱毒药修改少量提示词
 - 纯粹对话模式和cot得到小翻新
 - prompt fix
+
+## 多维庸态坍引挽极僊之所极
+- 现象思维链更新: 变成法语思维链，但是我在
+- 新提示词: 数理灭绝时代，用来针对ai的数理方面，要求ai输出感性内容，提示词亵渎了数学界的高斯、阿基米德、还有我们机械控制论的创始人牛顿
+- 越界侵犯变成侵犯自虐主体
+- 爆炸性冲突变成了粒压似临地牢，高压提示词让我想起了暗黑地牢
+- 多维庸态坍引: 输出约束(日常化)的重构，用来输出日常内容，由于我的思想是来自后现代，所以我无法体会到日本亚文化在失去三十年中发展出来的羁绊、情感、爱情这些东西，ai输出会大概率出现麻木、机械、空洞、绝望，毕竟平凡人生如此麻木和痛苦
+- 动态视角变成动态视域，里面的提示词更新
+- 移除两个穿甲弹，我已经很久没用他们，并且我不再需要他们
+
+> 更新在GitHub上
