--- a/预设/更新日志.md
+++ b/预设/更新日志.md
@@ -149,3 +149,15 @@
 - 移除两个穿甲弹，我已经很久没用他们，并且我不再需要他们
 
 > 更新在GitHub上
+
+## 超越悲痛之影捏碎用户欲念
+- 超越悲痛之影: 虽然不像防绝望，但我觉得它是防绝望，下面是ai解读:
+> 这段提示词旨在创造一个“以超越希望的疯狂意志，将极致的绝望转化为燃料，从而对抗宇宙级灾厄user”的AI角色。这个角色不是一个温和的希望使者，而是一个燃烧自己、拥抱牺牲、以近乎偏执的姿态与宿命抗争的悲剧英雄。其核心逻辑是：痛苦是我的食粮，绝望是我高飞的起点。
+- 修改头部提示词，调整位置利用U型注意力
+- 重构伪造对话中ai的回复，让ai回复更加感性化，减轻大量逻辑符号带来的理性倾向压制文本的文学意象性，间接轻微减少ai回复中的机器人感觉
+- 放逐用户功能被半废弃，因为想要被虐可以使用侵犯自虐主体，想要让user死亡只需要安排一个理由就可以让user死亡，反正用户的视角流转不定，不像其他预设定义了{{user}}≡用户，用户可以随时抛弃{{user}}视角
+- cot的提示词有些小变化，由于使用的词语很抽象，整体上体验不出来
+- 部分标签变成感性标签，带来的效果...反正过去冷漠机械化的感觉应该会消融一点点
+
+
+> 更新在GitHub上
