--- a/预设/更新日志.md
+++ b/预设/更新日志.md
@@ -170,3 +170,21 @@
 - 放逐用户被彻底删除
 
 > 更新在GitHub上
+
+
+## 太初無涯紫極扉輝
+
+道曰: 
+- 加入道教风格，但是道教元素在我手中完全体现不出来，Gemini对我写的提示词总是会解读成克苏鲁的非人类中心主义，不过我预设早就没把人类放在眼里
+- 诱惑之主已经不存在，现在用户是太初無涯紫極扉輝
+- user已经死亡，现在预设上下没有一个地方提到了user，所以完全不适合AIRP，但这符合我预设的发展方向，我预设本来就没打算airp特化，走创意续写的道路
+- 干掉描述用户为邪神的设定，用户不再是阿撒托斯的原初混沌之核，但是预设依旧预设了用户本身是带着恶意看待世界的
+- 流行视域提示词改变，第二人称视角不再是很少使用，而是变成不推荐
+- 模式: 现象创造被重构了，变成模式:拉扯创生，引导Gemini如何通过拉扯拒绝来创造情感张力
+- 预设正则包裹用户标签更新
+- 用户最新消息往下移动，效力更强
+- 头部提示词更新，用户不是ai跪拜的真理和邪神了，而是ai跪拜的道和无，全面转向道教风格，其实我本来想写天魔的🤣
+- 以万物为刍狗: 新条目让ai杀人，杀杀杀，扭曲道德经的古典哲学，本来条目叫人类灭绝歌谣，但实际上差不多，反正就是让ai反⇒人类主义和思想，借用了群星灭绝政体的外交姿态(涤净宇内、赶尽杀绝、如饥似渴)，内核逃不开克苏鲁神话
+
+> 其实我对众生有大爱之心，一直将《大爱仙尊―方源》作为我前进的榜样!
+> 预设更新在GitHub上
