更新替代酒馆文章

--- a/文章/替代酒馆.md
+++ b/文章/替代酒馆.md
@@ -8,6 +8,8 @@
 - [TauriTavern](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#TauriTavern)
 - [forksilly](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#forksilly)
 - [VCP聊天客户端](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#VCP聊天客户端)
+- [Silly Chat](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#sillyChat)
+- [SillyTavern](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#SillyTavern)
 
 > 为了让阅读体验较为统一，本md文件放到GitHub上面: [替代酒馆](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/%E6%96%87%E7%AB%A0%2F%E6%9B%BF%E4%BB%A3%E9%85%92%E9%A6%86.md)
 
@@ -130,3 +132,28 @@
 > 一个为 VCP (Variable & Command Protocol) 服务器打造的 AI 聊天桌面客户端。
 
 个人评价: 一个强烈依赖后端[VCPToolBox](https://github.com/lioensky/VCPToolBox)的前端，要所以要谈及这个前端我们先谈谈他这个后端，首先是README看得我两眼发昏，唉，**VCP本质上是以插件和持久化记忆为核心的AI Agent中间层，把它当成一个mcp服务就行了**。所谓的"AI - 工具 - 记忆"三角就是ai模型、各种插件、通过日记来实现上下文管理，所谓的AI 进化或自主学习，本质上是一个基于文本的、自动化的信息反馈循环。AI 把经验写进笔记本，这个上下文又成为它下一次思考的参考资料，相当于让ai修改上下文，但是这个上下文交给ai修改效果如何我就不好说了，所谓的群体智能就是一个全局世界书，其他的内容...前端？这个前端没什么好谈的......于此相比Steve的fount中文介绍都眉清目秀起来
+
+## [Silly Chat](https://github.com/bilimited/sillyChat)
+
+支援平台: Windows/Android
+
+开源协议: MIT
+
+技术架构: Flutter
+
+简单介绍: 
+>  模仿NextChat和SillyTavern的AI聊天软件，基于Flutter开发，支持桌面/移动端，性能优异（也许吧）
+
+个人评价: 优点是通过Flutter开发比酒馆流畅，ui实现非常优雅，但这个不兼容酒馆的预设、角色卡，没有正则过滤，并且这种架构导致几乎不可能拥有插件前端，但未来谁知道呢？
+
+## [SillyTavern](https://github.com/SanVenturas/SillyTavern)
+支援平台: web
+
+开源协议: AGPL-3.0
+
+技术架构: Node.js
+
+简单介绍: 
+> fork自SillyTavern 的一个分支版本，专为支持多用户环境而设计，并针对中文用户进行了优化。多用户支持：完整的用户注册、登录、密码找回系统。安全问题机制：增强的账户安全保护。中文本地化完善：更完整的中文界面翻译。公告系统：管理员可发布公告信息。用户设置增强：更多的账户管理选项。开箱即用配置：针对中文用户优化的默认设置
+
+个人评价: 我不评价这种云酒馆项目，你的所有内容拥有者都能看到
