Update 1 file: 替代酒馆.md

--- a/文章/替代酒馆.md
+++ b/文章/替代酒馆.md
@@ -10,6 +10,7 @@
 - [VCP聊天客户端](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#VCP聊天客户端)
 - [Silly Chat](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#sillyChat)
 - [SillyTavern](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#SillyTavern)
+- [Gemini_Chatbox-](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#Gemini_Chatbox-)
 
 > 为了让阅读体验较为统一，本md文件放到GitHub上面: [替代酒馆](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/%E6%96%87%E7%AB%A0%2F%E6%9B%BF%E4%BB%A3%E9%85%92%E9%A6%86.md)
 
@@ -157,3 +158,16 @@
 > fork自SillyTavern 的一个分支版本，专为支持多用户环境而设计，并针对中文用户进行了优化。多用户支持：完整的用户注册、登录、密码找回系统。安全问题机制：增强的账户安全保护。中文本地化完善：更完整的中文界面翻译。公告系统：管理员可发布公告信息。用户设置增强：更多的账户管理选项。开箱即用配置：针对中文用户优化的默认设置
 
 个人评价: 我不评价这种云酒馆项目，你的所有内容拥有者都能看到
+
+## [Gemini_Chatbox-](https://github.com/novtia/Gemini_Chatbox-)
+
+支援平台: aistudio
+
+开源协议: MIT
+
+技术架构: React
+
+简单介绍: 
+> 一个基于React的现代化AI聊天应用，白嫖aistudio付费模型而开发的小项目。
+
+个人评价: 无
