Update 15 files: 动态NPC.yaml, 动态难度_休闲.yaml, 动态难度_坚韧.yaml, 宝可梦与人类关系.yaml, 宝可梦捕捉.yaml, 宿敌.yaml, 现象：超进化.yaml, 绮光地区.yaml, 限制与成长.yaml, 随机事件.yaml, 整体大纲思路.yaml, 草稿.yaml, 角色描述.yaml, 【日魇预设】太初無涯紫極扉輝.json, 更新日志.md, ...omitted 0 file(s)

--- a/预设/更新日志.md
+++ b/预设/更新日志.md
@@ -188,3 +188,11 @@
 
 > 其实我对众生有大爱之心，一直将《大爱仙尊―方源》作为我前进的榜样!
 > 预设更新在GitHub上
+
+
+## 小更新
+- 现在可以选择要不要让用户输出用户的指令了，之前都是ai输出用户指令，无法触发世界书绿灯
+- 底部是我用来玩前端卡的标签格式，我建议关了
+- 经过测试我这个预设最好是在50k的范围内游玩，超过后ai注意力会大幅度衰减
+- 这个版本我没有开启cot，自己开吧
+- 少量提示词更新调整
