--- a/预设/更新日志.md
+++ b/预设/更新日志.md
@@ -196,3 +196,17 @@
 - 经过测试我这个预设最好是在50k的范围内游玩，超过后ai注意力会大幅度衰减
 - 这个版本我没有开启cot，自己开吧
 - 少量提示词更新调整
+
+
+## 汉文化圈(假文风)
+- 汉文化圈，能改变ai输出风格的内容，类似于文风，但我的目的是用于解决预设本身的会让模型用日语回复的问题，占用2k，这下我的预设也开始大起来了
+- 预设头部精简，去除了某些不必要的提示词
+- 多维庸态坍引被合并到成人妙药里面
+- 大道玄音被我踢了，现在上位的是詭道隱漣
+- 拟态蜜壺加強提示词效力
+- 伪造ai回复里面添加了"♡"符号用于增加情绪
+- 过去的三个粗糙的提示词条目被彻底删除
+- 隐藏_次要范畴回来了，避免ai潜在提示词冲突
+- 新正则，直接删除正文里面"的"、"-"还有视域等这些预设本身的抽象东西
+- 其他地方小提示词更新修复
+> 预设更新在GitHub上
