Update 3 files: README.md, 【隐迹渐现】脱神入画.json, 预设介绍.md

--- a/预设/隐迹显现/预设介绍.md
+++ b/预设/隐迹显现/预设介绍.md
@@ -6,15 +6,13 @@
 - 铃音？
 - 日魇预设
 ## 特点？
-- 没有直接预设ai和用户身份，而是通过情景来隐喻用户是画家，ai是画笔，减少了潜在冲突
+- 没有直接预设ai和用户身份，而是通过情景来隐喻用户是画家，ai是画笔，减少了潜在冲突，是我研究预设的一个点子
 - 依旧是流形视域，这意味着ai和不断切换视角来推动故事发
-- 没有日魇预设那样占据ai更多注意力消耗，这意味者能玩大型卡
+- 没有日魇预设那样占据ai更多注意力消耗，这意味者能玩大型卡，对角色卡影响更小
 - 由于预设太过于简约，所以要联通的话需要开反截断才能避免空回，如果用日魇预设直接联通
-- 色情暴露和汉文化圈都是我拿来用的，普遍在2k至3k左右，可以不开
-- {{user}}存在，但是ai不知道用户扮演{{user}}
+- 色情暴露和汉文化圈都是我拿来用的，普遍在2k至3k左右，不用可以不开
+- {{user}}存在，但是ai会把{{user}}当成一个未知实体
 - 整个对话本身缺少一种我和你的指示代词，让ai默认你和我都在场
-- 注意，你可以控制任何一个人，这意味着{{user}}在预设中可以随意被抛弃
-## 墓地
-- 防抢话: 没啥用
-- 字数控制: 没必要
-- 想到再说...
+- 注意，你可以控制任何一个人，这意味着{{user}}在预设剧情中可以随意被抛弃
+- 预设依旧会出现神圣化内容，但应该不会像日魇预设一样了
+- 让ai回复是可爱的语气化中文，至少不会像日魇预设一样可能会出现日语输出
