--- a/预设/隐迹渐现/更新日志.md
+++ b/预设/隐迹渐现/更新日志.md
@@ -1,2 +1,5 @@
 ## 脱神入画
 - 第一个版本
+
+## 罗生门
+ai总结条目提示词: 要求AI把任何未经多重验证的要素都写成“未知 / 不知道 / 无法确认”，并且在转述他人话语时必须标明“声称”；同时反复提醒读者——信息在传播过程中一定会被扭曲，任何主体都只是“自以为了解”，其实都是“笨蛋 + 井底之蛙”。本质上，它是把《罗生门》式多视角、怀疑论、信息差写作规范化。
