预设更新 添加两篇risu文章

--- a/预设/隐迹渐现/更新日志.md
+++ b/预设/隐迹渐现/更新日志.md
@@ -2,4 +2,16 @@
 - 第一个版本
 
 ## 罗生门
-ai总结条目提示词: 要求AI把任何未经多重验证的要素都写成“未知 / 不知道 / 无法确认”，并且在转述他人话语时必须标明“声称”；同时反复提醒读者——信息在传播过程中一定会被扭曲，任何主体都只是“自以为了解”，其实都是“笨蛋 + 井底之蛙”。本质上，它是把《罗生门》式多视角、怀疑论、信息差写作规范化。
+ai总结条目提示词: 要求AI把任何未经多重验证的要素都写成“未知 / 不知道 / 无法确认”，并且在转述他人话语时必须标明“声称”；同时反复提醒读者——信息在传播过程中一定会被扭曲，任何主体都只是“自以为了解”，其实都是“笨蛋 + 井底之蛙”。本质上，它是把《罗生门》式多视角、怀疑论、信息差写作规范化
+
+## 水墨砚台
+- 添加软化暴力条目，试图引导ai从物理暴力变成精神控制，Gemini说实话还是太纯洁了，比不上GPT的浑然天成🤣
+- 罗生门条目提示词简化
+- 混沌灵感用于安排ai剧情多样化
+- NSFW单纯只是瑟瑟的单独指导
+- 流形视域大幅度简化
+- 复杂交流用于让ai模拟人类现实交流多样性，不过ai模拟地不太好
+- 从隔壁k预设取经，能杀一部分八股
+- 初步支持risu，支持通过开关将白描增强、防止429、反截断、软化暴力(精神控制)、NSFW、罗生门通过开关来控制相应提示词开关
+- 由于risu的{{lastusermessage}}语法在预设里面获得的是空内容，所以只能用{{lastmessage}}，如果你什么都不输入的话，这个会把ai回复的消息捕获，包括ai输出的思维链
+- 通过risu使用本预设会把思维链爆出来，无标签包裹，不要让<Horizon_Primary_Retention>消失，正则依靠它定位删除前面思维链内容
