--- a/预设/隐迹渐现/预设介绍.md
+++ b/预设/隐迹渐现/预设介绍.md
@@ -1,18 +1,6 @@
 # 隐迹渐现(Pentiment)
-> 发现我的日魇预设出现了神圣化的宗教内容，然后和其他人交流了一下，发现我预设本身就是建立在一种宗教的情景上面的，重构有些困难，所以我直接写一个日魇预设的简洁版本
+> 灵感来源于黑耀石工作室的Pentiment，含义就是字面意思
 
-## 来源灵感
-- 黑耀石工作室的Pentiment，中世纪故事，含义就是字面意思
-- 铃音？
-- 日魇预设
 ## 特点？
-- 没有直接预设ai和用户身份，而是通过情景来隐喻用户是画家，ai是画笔，减少了潜在冲突，是我研究预设的一个点子
-- 依旧是流形视域，这意味着ai和不断切换视角来推动故事发
-- 没有日魇预设那样占据ai更多注意力消耗，这意味者能玩大型卡，对角色卡影响更小
-- 由于预设太过于简约，所以要联通的话需要开反截断才能避免空回，如果用日魇预设直接联通
-- 色情暴露和汉文化圈都是我拿来用的，普遍在2k至3k左右，不用可以不开
-- {{user}}存在，但是ai会把{{user}}当成一个未知实体
-- 整个对话本身缺少一种我和你的指示代词，让ai默认你和我都在场
-- 注意，你可以控制任何一个人，这意味着{{user}}在预设剧情中可以随意被抛弃
-- 预设依旧会出现神圣化内容，但应该不会像日魇预设一样了
-- 让ai回复是可爱的语气化中文，至少不会像日魇预设一样可能会出现日语输出
+- 比日魇预设要轻量
+- 初步支持risu，支持通过开关将白描增强、防止429、反截断、软化暴力(精神控制)、NSFW、罗生门通过开关来控制相应提示词开关
