Update 4 files: 介绍.md, 深色.html, 草稿1.yaml, 舆论危机公关模拟器.png

--- a/角色卡/危机公关模拟器/介绍.md
+++ b/角色卡/危机公关模拟器/介绍.md
@@ -1,3 +1,5 @@
+> 需要安装酒馆助手和提示词模板语法才能使用，不过现在应该都人人安装了吧？
+
 ## 引言
 
 在舆论危机中达成战略目标，游走于黑白社会边缘，穿上西装喝咖啡聊天，于谈笑风生间用结构性压迫剥削他人。谣言犹如野火蔓延，民意亦如潮水汹涌，权力金钱于暗处觥筹交错...故俗话说: “拜斯人要学斯人，莫混账磕了头去。入此门应出此门，须仔细扪着心来。”
@@ -14,6 +16,8 @@
 
 ### 特点
 
+采用大量变量，意味着
+
 战役模式: 开启战役模式后，当舆论危机结束后不会结束本次模拟，而是会进入幕间休息阶段，随后继续，如同跑团的连续团一样，举个例子就是: 在游戏上线前你就要负责到底，直到游戏关服或者你本人离职或死亡
 
 随机事件: 通过世界书条目概率性生成一到四件事件，由于是借助了酒馆，所以是真随机，可能会出现和剧情不匹配的随机事件，不过5条消息才有25%概率生成，难度算低了
@@ -21,8 +25,12 @@
 cot: 自带cot但是关闭，用来限制组织和角色避免ooc，大概有用
 
 ### 问题
-- 谷歌截断太厉害，写完都没有怎么仔细测试
-- 应该是mvu框架问题还是什么，反正会第一页声明会自动插入<StatusPlaceHolderImpl/>标签导致状态栏出现
+
+- 变量很多，基本是一个变量模拟器了，Gemini可能会哈气
+
+- 谷歌截断太厉害，写完都没有怎么仔细测试，如果有错误和我说
+
+- 应该是mvu框架问题还是我让Gemini写的状态栏有问题，反正会第一页声明会自动插入<StatusPlaceHolderImpl/>标签导致状态栏出现
 
 ### 想要新口味？
 
