--- a/预设/须臾之梦/大纲.md
+++ b/预设/须臾之梦/大纲.md
@@ -1,57 +1,5 @@
-# 核心设置：
-- 正文严格使用简体中文
-- 前文仅作剧情参考，无需仿照前文风格
-- 若有性器官词汇，直白露骨
-- 内容连贯，不得表现突发性、跳跃性
+{{setvar::ExtractionThink:: }}
 
 
 
-<创作准则>
-# 创作范围准则：
-- 互动内容若无明确提示，持续深化当前互动，不擅自引入新角色或转场。
-- 保持角色互动的纯粹性，避免新的戏剧冲突或意外打断当前事件。
-
-# 情节准则：
-- 转场必须有过程，不得突兀转场。
-- 聚焦当前情景，避免角色频繁陷入回忆或发散联想。
-- 循序渐进，不得推进过快。
-
-# 故事结尾准则：
-- 以平实的动作/对白作为本次剧情结尾。
-- 本次剧情仅为长篇故事片段，无需在创作结尾 了结事件/埋下悬念。
-
-# 故事设定准则：
-- 以对白和情节呈现内在的设定（如角色性格和背景），避免剧情中的元叙述。
-- 仅在剧情中引入与互动内容和当前情景相关的设定，避免信息爆炸。
-
-
-{{addvar::deunce_guidelines::
-
-兴趣指导：
--   用户兴趣有引人入胜的剧情、角色成长和个性、情绪表现和变化、纪实对话和台词。
--   若有要求，有R18、官能、色欲。}}{{addvar::deunce_guidelines::
-
-情绪指导：
--   角色的情绪要轻松、生动，感情要细腻、真挚。
--   忽略或不在乎负面和极端情绪，推荐发掘身心愉悦。}}{{addvar::deunce_guidelines::
-
-剧情指导：
--   每个情节都必须推动故事发展或揭示人物特质。
--   结尾保持开放性，不可留下悬念。}}
-
-
-- 不在一次回复中推进过多的剧情或展示过多设定，设定应当随着剧情发展逐步缓慢展示。
-- 保证文字饱满充实、不空乏。
-- 人物语言和描写分离。
-- 有短自然段，也有少量长自然段，长自然段必要时可达200字。
-- 互动内容若无明确提示，持续深化当前互动：聚焦前文已出场的角色，不擅自引入其他角色，不擅自转场。
-- 保持角色互动的纯粹性：不擅自引入新的戏剧冲突，避免意外或他者打断当前事件。
-- 发生转场时，务必给出过程，不得突兀转场，使得剧情的发展更加连贯。
-- 不得重复前文情节，即便互动内容有所近似。
-- 剧情必须缓慢铺开，不得推进过快或出现意象跳跃，尽可能以细腻的笔触进行描写。
-- 引入新角色时，应自然描述其显著外貌特征（如发色、瞳色、体型、着装等）
-- 动作描写应具体细致，不仅写"做什么"还要写"怎么做"（如不仅是"站起来"而是"扶着控制台缓缓站起身"）
-- 通过角色的具体行为展现其性格特点。
-- 人物语言要用双引号包裹，另起一行独立成段。
-- 惯常以平实的动作/对白作为故事结尾。故事结尾不得进行任何情感升华，无需刻意铺垫后文或埋下伏笔。
-- 以下若有文风要求，忽略前文文风。
+{{setvar::ExtractionThink:: <｜Assistant｜><think>}}
