--- a/预设/须臾之梦/更新日志.md
+++ b/预设/须臾之梦/更新日志.md
@@ -5,5 +5,17 @@
 - 修改了弗拉基米尔·纳博科夫的文风，添加了肉文、少妇白洁、清理了白幼瘦审美
 - 现在尾部通过动作和对话防止升华总结
 ### 问题
-- 现在还没有安排思维链，也没有跳思维链，之后再加入特殊token跳思维链
-- 没有字数要求
+- 没有安排思维链，也没有跳思维链，之后再加入特殊token跳思维链
+- 暂时没有加入字数要求
+
+
+
+## 8.26 色鲸鱼
+- 支持卡思维链think
+- 如果安装了预设自带正则的插件则无需安装额外正则
+- 弗拉基米尔·纳博科夫的文风现在会提供走光福利，让你一窥1011的纯洁与诱惑的矛盾性张力
+- *现在角色会通过这样表达内心所想*
+- 调整尾部
+### 问题
+- 弗拉基米尔·纳博科夫的《XXX》文风会让鲸鱼娘描写文学化，会出现无关意象乱入
+- 依旧没有打算加入字数要求
