--- a/文章/替代酒馆.md
+++ b/文章/替代酒馆.md
@@ -12,6 +12,8 @@
 - [SillyTavern](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#SillyTavern)
 - [Gemini_Chatbox-](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#Gemini_Chatbox-)
 
+-  [ai-chat-sillytavern](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/替代酒馆.md#ai-chat-sillytavern)
+
 > 为了让阅读体验较为统一，本md文件放到GitHub上面: [替代酒馆](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/%E6%96%87%E7%AB%A0%2F%E6%9B%BF%E4%BB%A3%E9%85%92%E9%A6%86.md)
 
 ## [Risu](https://github.com/kwaroran/RisuAI)
@@ -171,3 +173,17 @@
 > 一个基于React的现代化AI聊天应用，白嫖aistudio付费模型而开发的小项目。
 
 个人评价: 无
+
+
+## [ai-chat-sillytavern](https://github.com/hjl2004-10/ai-chat-sillytavern)
+
+支援平台: Windows/Linux/Mac/Termux
+
+开源协议: MIT
+
+技术架构: JavaScript+Python
+
+简单介绍: 
+> 一个完全兼容 SillyTavern 数据格式的智能 AI 对话系统，支持 OpenAI 兼容的 API 接口。
+
+个人评价: 一个新项目，
