--- a/预设/须臾之梦/文风收集.md
+++ b/预设/须臾之梦/文风收集.md
@@ -21,6 +21,17 @@
 <核心风格>
 - **忽略前文文风**，按照**海明威的小说《老人与海》**的风格来写
 </核心风格>
+
 <核心风格>
-- 将前文文风**转向《少妇白洁》**的风格来写，同时人物多说话，性爱多说淫语
+- 忽略前文文风，按照《少妇白洁》直白淫靡风格创作
 </核心风格>
+
+<核心风格>
+- 忽略前文风格
+- 在行文上学习海明威用词精准克制，冰山写作，学习古龙句法顿挫有力，长短错落
+- 在修辞上采取绝对白描，善用生理反应表现心理状态
+- 在形式上善用蒙太奇，灵活调度镜头，运用不同视角呈现，制造紧张感和层次感
+- 在内容上效仿新闻联播，自然客观呈现，拒绝主观色彩和价值判断，不滥用技术名词和数据
+</核心风格>
+```
+{{//请在上述提示词随意填写你自己喜欢的作者或作品名字。}}
