Update 1 file: 泛酒馆对象.md

--- a/文章/泛酒馆对象.md
+++ b/文章/泛酒馆对象.md
@@ -20,6 +20,7 @@
 - [EmotiChat](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#EmotiChat)
 - [YAESandBox](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#YAESandBox)
 - [闪光聊天](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#闪光聊天)
+- [Anh-Chat](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#Anh-Chat)
 
 > 为了让阅读体验较为统一，本md文件放到GitHub上面: [泛酒馆对象](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/%E6%96%87%E7%AB%A0%2F%E6%9B%BF%E4%BB%A3%E9%85%92%E9%A6%86.md)
 
@@ -59,7 +60,7 @@
 
 个人评价: 是一个强大的跨平台ai交互框架，需要有编程基础，并且是非常规的ai聊天工具，可以在Discord，终端，Telegram 当中接入使用，可以原生执行JavaScript，不受浏览器环境制约，权限很高，可以直接控制本地文件，如果要使用，我的建议是亲自阅读角色的每一行代码，~~我不喜欢ai生成的介绍文件，看起来非常尴尬~~ 
 
-### [Cradle](https://github.com/icaydael22/CradleAI/tree/main)
+### [Cradle](https://github.com/icaydael22/CradleAI)
 
 支援平台: Android/iOS
 
@@ -234,3 +235,16 @@
 > 瞎做的 .NET Blazor 基于的AI对话 前端。
 
 个人评价: 无
+
+### [Anh-Chat](https://github.com/Kas1o/ShimmerChat)
+
+支援平台: VSCode
+
+开源协议: Apache-2.0 license
+
+技术架构: TypeScript
+
+简单介绍: 
+> 基于 Roo Code 的特化版本，在保留强大编码能力的基础上，极大强化了聊天交互体验
+
+个人评价: 连VSCode也可以变成ai情感聊天工具😂
