Update 1 file: 泛酒馆对象.md

--- a/文章/泛酒馆对象.md
+++ b/文章/泛酒馆对象.md
@@ -236,7 +236,7 @@
 
 个人评价: 无
 
-### [Anh-Chat](https://github.com/Kas1o/ShimmerChat)
+### [Anh-Chat](https://github.com/AndreaFrederica/Roo-Code-Chat)
 
 支援平台: VSCode
 
