Update 1 file: 泛酒馆对象.md

--- a/文章/泛酒馆对象.md
+++ b/文章/泛酒馆对象.md
@@ -13,7 +13,7 @@
 - [TauriTavern](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#TauriTavern)
 - [forksilly](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#forksilly)
 - [VCP聊天客户端](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#VCP聊天客户端)
-- [Silly Chat](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#sillyChat)
+- [SillyChat](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#sillyChat)
 - [SillyTavern](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#SillyTavern)
 - [Gemini_Chatbox-](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#Gemini_Chatbox-)
 - [ai-chat-sillytavern](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#ai-chat-sillytavern)
@@ -145,7 +145,7 @@
 
 个人评价: 一个强烈依赖后端[VCPToolBox](https://github.com/lioensky/VCPToolBox)的前端，要所以要谈及这个前端我们先谈谈他这个后端，首先是README看得我两眼发昏，唉，**VCP本质上是以插件和持久化记忆为核心的AI Agent中间层，把它当成一个mcp服务就行了，这让我想到某个话语:"没有什么问题是中间层解决不了的，如果不能解决，那就是中间层不够多🤣"**。其他的内容...前端？这个前端没什么好谈的......于此相比Steve的fount中文介绍都眉清目秀起来
 
-### [Silly Chat](https://github.com/bilimited/sillyChat)
+### [SillyChat](https://github.com/bilimited/sillyChat)
 
 支援平台: Windows/Android
 
@@ -170,7 +170,7 @@
 
 个人评价: 我不评价这种云酒馆项目，你的所有内容拥有者都能看到
 
-### [Gemini_Chatbox-](https://github.com/novtia/Gemini_Chatbox-)
+### [Gemini_Chatbox](https://github.com/novtia/Gemini_Chatbox-)
 
 支援平台: aistudio
 
