Update 1 file: 泛酒馆对象.md

--- a/文章/泛酒馆对象.md
+++ b/文章/泛酒馆对象.md
@@ -1,4 +1,4 @@
-> 前言: 我在这里列出我所知用来角色扮演的项目，它们或许没有酒馆的丰富生态，但也许它们会给人有别于酒馆得体验，纯主观，排序按照写入记录时间排
+> 前言: 我在这里列出我所知用来角色扮演的项目，它们或许没有酒馆的丰富生态，但也许它们会给人有别于酒馆得体验，纯主观记录，排序按照写入记录时间排
 
 ## 类型: 
 
@@ -248,3 +248,17 @@
 > 基于 Roo Code 的特化版本，在保留强大编码能力的基础上，极大强化了聊天交互体验
 
 个人评价: 连VSCode也可以变成ai情感聊天工具😂
+
+### [SmartTavern]()
+
+支援平台: 未知
+
+开源协议: ???
+
+技术架构: vue+TypeScript+Python
+
+简单介绍: 
+> 自称是聪明的酒馆，替代酒馆一切不支持的功能和屎山，极大拓展功能边界
+
+个人评价: 2025年12月2日刚出现，如此短暂的时间让其他人探探再说
+
