--- a/文章/泛酒馆对象.md
+++ b/文章/泛酒馆对象.md
@@ -21,6 +21,7 @@
 - [YAESandBox](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#YAESandBox)
 - [闪光聊天](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#闪光聊天)
 - [Anh-Chat](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#Anh-Chat)
+- [SmartTavern](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/文章/泛酒馆对象.md#SmartTavern)
 
 > 为了让阅读体验较为统一，本md文件放到GitHub上面: [泛酒馆对象](https://github.com/Hai-de/Cyber_Character_Card_Family_Tree/blob/main/%E6%96%87%E7%AB%A0%2F%E6%9B%BF%E4%BB%A3%E9%85%92%E9%A6%86.md)
 
